# flir-blackfly-experiments

./: CMakeLists.txt  main.cpp
